add ProductsListGroupProduct.vue, add AppButton.vue, add sass utils

--- a/src/styles/components/_products-list.scss
+++ b/src/styles/components/_products-list.scss
@@ -40,9 +40,10 @@
     }
   }
 
-  &__group-items {
+  &__group-products {
     display: grid;
     grid-template-columns: 1fr;
+    align-items: start;
     gap: $products-group-items-gutter;
 
     @include media-breakpoint-up(md) {
