add cart store module, add AppInput.vue

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -9,3 +9,11 @@
 .text-end {
   text-align: end !important;
 }
+
+.text-center {
+  text-align: center !important;
+}
+
+.maxw-50px {
+  max-width: 50px !important;
+}
