--- a/src/styles/components/_loading.scss
+++ b/src/styles/components/_loading.scss
@@ -1,27 +1,32 @@
 .loading {
-  background-color: $layout-bg-3;
-  border-radius: $border-radius;
   overflow: hidden;
 
+  background-color: $layout-bg-3;
+  border-radius: $border-radius;
+
   &__animated-background {
-    animation-duration: 1.25s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: placeHolderShimmer;
-    animation-timing-function: linear;
+    position: relative;
+
+    height: 100%;
+
     background: $dark;
     background: linear-gradient(to right, $layout-bg-2 10%, $layout-bg-3 18%, $layout-bg-2 33%);
     background-size: 800px 104px;
-    height: 100%;
-    position: relative;
+
+    animation-name: placeholder-shimmer;
+    animation-duration: 1.25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
   }
 }
 
-@keyframes placeHolderShimmer{
-  0%{
-    background-position: -468px 0
+@keyframes placeholder-shimmer {
+  0% {
+    background-position: -468px 0;
   }
-  100%{
-    background-position: 468px 0
+
+  100% {
+    background-position: 468px 0;
   }
 }
